// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CountrySelector default value 1`] = `
<p
  className="input text"
>
  <label>
    country
  </label>
  <select
    className=""
    disabled={false}
    name="country"
    onBlur={[Function]}
    onChange={[Function]}
    value="BRA"
  >
    <option
      value="BRA"
    >
      BRA
    </option>
    <option
      value="USA"
    >
      USA
    </option>
  </select>
</p>
`;

exports[`CountrySelector should sort the select 1`] = `
<p
  className="input text"
>
  <label>
    country
  </label>
  <select
    className=""
    disabled={false}
    name="country"
    onBlur={[Function]}
    onChange={[Function]}
    value="BRA"
  >
    <option
      value="BRA"
    >
      BRA
    </option>
    <option
      value="USA"
    >
      USA
    </option>
  </select>
</p>
`;

exports[`CountrySelector show options 1`] = `
<p
  className="input text"
>
  <label>
    country
  </label>
  <select
    className=""
    disabled={false}
    name="country"
    onBlur={[Function]}
    onChange={[Function]}
    value=""
  >
    <option
      value="BRA"
    >
      BRA
    </option>
    <option
      value="USA"
    >
      USA
    </option>
  </select>
</p>
`;
